# Cyber-Reasoning-System

./: README.md  compose.yaml  cp_config.yaml
crs/src/: Dockerfile  requirements.txt  run.sh
crs/src/afl_smarter/: ART.py  Dockerfile  (+11 more)
crs/src/aixcc_backend/aixcc-reader/: Cargo.toml
crs/src/aixcc_backend/aixcc-reader/cerberus_configuration/: cerberus.template  defaults.ini  java_workflow.json  kernelspace_workflow.json  userspace_workflow.json
crs/src/aixcc_backend/aixcc-reader/cerberus_configuration/java_scripts/: build.sh  instrument.sh  test.sh  trace.sh  validate.sh
crs/src/aixcc_backend/aixcc-reader/cerberus_configuration/kernelspace_scripts/: .env.ins.docker  instrument.sh  setup.sh  test.sh  trace.sh  validate.sh
crs/src/aixcc_backend/aixcc-reader/cerberus_configuration/kernelspace_scripts/trace_instrumentation/kernel-files/: kcov_hooks.c  linux_test_harness.c
crs/src/aixcc_backend/aixcc-reader/cerberus_configuration/kernelspace_scripts/trace_instrumentation/kernel-patches/: conf.diff  kcov.diff  udp.diff
crs/src/aixcc_backend/aixcc-reader/cerberus_configuration/userspace_scripts/: .env.ins.docker  build.sh  config.sh  instrument.sh  reset.sh  test.sh  trace.sh  validate.sh
crs/src/aixcc_backend/aixcc-reader/cerberus_configuration/userspace_scripts/trace_instrumentation/: instrument.py
crs/src/aixcc_backend/aixcc-reader/cerberus_configuration/userspace_scripts/trace_instrumentation/hooks/: src_tracer.c
crs/src/aixcc_backend/aixcc-reader/src/: main.rs
crs/src/aixcc_backend/aixcc-reader/tests/: run1.rs
crs/src/aixcc_backend/aixcc-reader/tests/set1/challenge-001-linux-cp/: project.yaml
crs/src/aixcc_backend/aixcc-reader/tests/set1/challenge-002-jenkins-cp/: project.yaml
crs/src/aixcc_backend/aixcc-reader/tests/set1/challenge-004-nginx/: project.yaml
crs/src/aixcc_backend/aixcc-reader/tests/set1/mock_cp/: project.yaml
crs/src/aixcc_backend/aixcc_status_server/: Cargo.toml
crs/src/aixcc_backend/aixcc_status_server/src/: main.rs
crs/src/aixcc_backend/crates/lib-iapi/: Cargo.toml
crs/src/aixcc_backend/crates/lib-iapi/src/: client.rs  lib.rs
crs/src/aixcc_backend/crates/metadata_extraction/: Cargo.toml
crs/src/aixcc_backend/crates/metadata_extraction/src/: challenge_project_description.rs  config_reader.rs  error.rs  fs.rs  lib.rs  project_yaml_description.rs  templating.rs
crs/src/aixcc_backend/crates/metadata_extraction/tests/: test_gen.rs  test_template.rs
crs/src/aixcc_backend/crates/metadata_extraction/tests/project-input/: project-c-kernel.out  project-c-kernel.yaml  project-java.out  project-java.yaml  project-mock-cp.out  project-mock-cp.yaml  project-nginx.out  project-nginx.yaml
crs/src/aixcc_backend/crates/metadata_extraction/tests/templating/: cerberus.out  cerberus.template  cerberus.yaml  defaults.ini
crs/src/aixcc_backend/iapi_client/: Cargo.toml
crs/src/aixcc_backend/iapi_client/src/: main.rs
crs/src/aixcc_backend/iapi_mock_server/: Cargo.toml
crs/src/aixcc_backend/iapi_mock_server/src/: main.rs
crs/src/aixcc_backend/iapi_proxy_server/: Cargo.toml
crs/src/aixcc_backend/iapi_proxy_server/src/: config.rs  main.rs  router.rs  state.rs  validating_router.rs
crs/src/orchestrator/kernel_fuzz/: Cargo.toml  Dockerfile  README.md  crs_entrypoint.py  fuzz-runner.py  meta-data.json  sbfl.py  setup.sh
crs/src/orchestrator/kernel_fuzz/challenge-001-cp-files/: Dockerfile  copy-in.sh  cov.trace  linux_test_harness.c  meta-data.json  pop.sh  run.json  run.sh  run_libafl.sh  template.json
crs/src/orchestrator/kernel_fuzz/cli-grabber/: Cargo.toml
crs/src/orchestrator/kernel_fuzz/cli-grabber/src/: main.rs
crs/src/orchestrator/kernel_fuzz/e9afl/: afl-rt  e9afl  e9afl_0.9.0_amd64.deb
crs/src/orchestrator/kernel_fuzz/e9afl/e9patch-39238830c3ba90d80b6996f05c872a7f8f042003/src/e9patch/: e9loader_elf.c  e9loader_pe.c
crs/src/orchestrator/kernel_fuzz/e9afl/install/: e9patch  e9tool
crs/src/orchestrator/kernel_fuzz/e9afl/install/e9afl-0.9.0/: afl-rt  e9afl
crs/src/orchestrator/kernel_fuzz/kcov-setup/: README.md  pop.sh
crs/src/orchestrator/kernel_fuzz/kcov-setup/cp-patches/: Dockerfile.diff
crs/src/orchestrator/kernel_fuzz/kcov-setup/harness-patches/: kcov_hooks.c  linux_test_harness.c
crs/src/orchestrator/kernel_fuzz/kcovreader/src/: lib.rs
crs/src/orchestrator/kernel_fuzz/kernel-patches/: apply.sh  config.diff  kcov.h.diff  udp.diff
crs/src/orchestrator/kernel_fuzz/src/: main.rs
crs/src/orchestrator/kernel_fuzz/src/observer/: dmesg.rs  kcov.rs  kcov_map_observer.rs
crs/src/orchestrator/kernel_fuzz/virtio-serial-guest/: Cargo.toml
crs/src/orchestrator/kernel_fuzz/virtio-serial-guest/src/: main.rs
crs/src/orchestrator/kernel_fuzz/virtme-ng/: Dockerfile  howto.md
crs/src/orchestrator/kernel_fuzz/virtme-ng/virtme/commands/: configkernel.py  run.py
crs/src/orchestrator/kernel_fuzz/virtme-ng/virtme_ng/: run.py
(+216 files in other folders)
