[package]
name = "aixcc-reader"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
metadata_extraction = {path = "../crates/metadata_extraction"}
rayon = "1.10.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3.1"