[package]
name = "aixcc_status_server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
axum = {version = "0.7", features = ["macros"]}
tower-http = {version = "0.5", features = ["fs"]}
tokio = { version = "1.37" , features = ["rt-multi-thread"]}
log = "0.4.21"

serde_json = "1.0"
serde = { version = "1.0.201", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

metadata_extraction = {path = "../crates/metadata_extraction"}

clap = { version = "4.5", features = ["derive", "env"] }

kube = { version = "0.92.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }