[package]
name = "iapi_mock_server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true


[dependencies]
lib-iapi = {path = "../crates/lib-iapi"}
axum = {version = "0.7", features = ["macros"]}
tower-http = {version = "0.5", features = ["fs"]}
tokio = { version = "1.37" , features = ["rt-multi-thread"]}
log = "0.4.21"
serde_json = "1.0"
serde = { version = "1.0.201", features = ["derive"] }
base64 = "0.22.1"
uuid = { version = "1.8", features = ["v4"] }
