[package]
name = "libafl-kcov"
version = "0.1.0"
edition = "2021"

[dependencies]
kcovreader = {path = "kcovreader"}
shared_memory = "0.12.0"
libafl = { version = "0.12.0", features = ["serdeany_autoreg"] }
libafl_bolts = "0.12.0"
log = "0.4.17"
simplelog = "0.12.0"
serde = "1.0.130"
serde_json = "1.0.117"
ahash = "0.8.11"
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
walkdir = "2.5.0"

[features]
default = ["dump-invalid-coverage"]
introspection = ["libafl/introspection"]
dump-invalid-coverage = []
