[package]
name = "metadata_extraction"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
derive_more = { version = "1.0.0-beta.6", features = ["from"]}
tera = { version = "1", default-features = false }
tera-text-filters = "1.0.0"
config = "0.14.0"

walkdir = "2.5"
sanitise-file-name = "1"


[dev-dependencies]
glob = "0.3"
serde_json = "1.0"
